# qlatanneal

./: CMakeLists.txt  CMakePresets.json  NOTICE  README.md  pyproject.toml
cmake/: QAnnealConfig.cmake.in
examples/: README.md  dense_ising_sa.cpp
examples/mpi/: sa_mpi.cpp
examples/python/: README.md  metrics_plot.md  metrics_plot.py  parallel_tempering.md  parallel_tempering.py  sa_multi.md  sa_multi.py  sqa_basic.md  sqa_basic.py
include/qanneal/: annealer.hpp  backend.hpp  core.hpp  dense_ising.hpp  hamiltonian.hpp  metrics.hpp  metrics_observer.hpp  observer.hpp  parallel_tempering.hpp  qubo.hpp  replica_annealer.hpp  schedule.hpp  sparse_ising.hpp  sqa_annealer.hpp  sqa_observer.hpp  sqa_schedule.hpp  sqa_state.hpp  state.hpp  version.hpp
include/qanneal/mpi/: mpi_context.hpp  mpi_replica.hpp
python/: bindings.cpp
python/qanneal/: __init__.py
scripts/slurm/: run_sa_mpi.sh  run_sa_mpi_mpirun.sh  run_sa_mpi_srun.sh
src/: annealer.cpp  dense_ising.cpp  mpi_replica.cpp  parallel_tempering.cpp  qubo.cpp  replica_annealer.cpp  sparse_ising.cpp  sqa_annealer.cpp
tests/: test_dense_ising.cpp  test_parallel_tempering.cpp  test_replica_annealer.cpp  test_sqa_basic.cpp
