[build-system]
requires = ["scikit-build-core>=0.6", "pybind11>=2.11", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[project]
name = "qanneal"
version = "0.1.0"
description = "Research-grade simulated quantum annealing toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "qanneal contributors"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = ["numpy>=1.24"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.18"
wheel.packages = ["python/qanneal"]
cmake.define = { QANNEAL_BUILD_PYTHON = "ON" }
sdist.include = [
  "CMakeLists.txt",
  "cmake/**",
  "include/**",
  "src/**",
  "python/**",
  "tests/**",
  "examples/**",
  "README.md",
  "LICENSE",
  "NOTICE"
]
